Flying Around/force-app/main/default/objects/Flight__c/fields/ArrivalAirport__c.field-meta.xml
<CustomField>
    <fullName>ArrivalAirport__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Arrival Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights (ArrivalAirport)</relationshipLabel>
    <relationshipName>ArrivalAirport</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>