Flying Around/force-app/main/default/objects/Flight__c/fields/DepartureAirport__c.field-meta.xml
<CustomField>
    <fullName>DepartureAirport__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Departure Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Flights</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>