Flying Around/force-app/main/default/objects/Flight__c/fields/Flight_Distance__c.field-meta.xml
<CustomField>
    <fullName>Flight_Distance__c</fullName>
    <label>Flight Distance</label>
    <precision>15</precision>
    <required>true</required>
    <scale>9</scale>
    <type>Number</type>
</CustomField>